--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
             </div>
             <img class="action-profile" src="assets/wc-mini.png" alt="">
         </div>
+        <section class="productive">
+            <h5 class="productive-title">Joined Thousands of Productive Users</h5>
+            <div class="productive-items">
+                <!-- .productive-item*3>h3.item-title+p.item-description -->
+                 <div class="productive-item">
+                    <h1 class="item-title">50K</h1>
+                    <p class="item-description">Active Users</p>
+                 </div>
+                 <div class="productive-item">
+                    <h1 class="item-title">2M+</h1>
+                    <p class="item-description">Focus Sessions</p>
+                 </div>
+                 <div class="productive-item">
+                    <h1 class="item-title">95%</h1>
+                    <p class="item-description">Satisfaction Rate</p>
+                 </div>
+            </div>
+        </section>
 
     </main>
     <footer>
