--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
                  </div>
             </div>
         </section>
+        <section class="touch">
+       <div class="touch-column">
+        <h1 class="touch-title">Let’s Get in Touch</h1>
+       </div>
+       <div class="touch-column">
+        <form action="">
+            <input type="email" name="" id="" placeholder="example@email.com">
+            <input type="text" name="" id="" placeholder="full name">
+            <textarea name="" id="" cols="30" rows="10" placeholder="write your message...."></textarea>
+            <input class="btn-primary" type="submit" value="Get in Touch">
+            </section>
+
+        </form>
+       </div>
 
     </main>
     <footer>
