--- a/index.html
+++ b/index.html
@@ -76,7 +76,28 @@
        </div>
 
     </main>
-    <footer>
+    <footer class="logo">
+        <h2 class="logo-title">LOGO</h2>
+        <p class="logo-description">
+            Ready to elevate your online presence? Contact us today to discuss<br> your project and discover how we can bring your vision to life.
+        </p>
+        
+        </div>
+        <div class="logo-items">
+            <div class="logo-item">
+                <p class="logo-title"><a href="https://www.programming-hero.com/">Home</a></p>
+                
+            </div>
+            <div class="logo-item">
+                <p class="logo-title"><a href="https://www.programming-hero.com/">About</a></p>
+            </div>
+            <div class="logo-item">
+                <p class="logo-title"><a href="https://www.programming-hero.com/">How it Works</a></p>
+            </div>
+            <div class="logo-item">
+                <p class="logo-title"><a href="https://www.programming-hero.com/">Services</a></p>
+            </div>
+
 
     </footer>
 </body>
